--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,40 @@
 services:
-- type: pserv
-  name: mysql
-  plan: standard
-  env: docker
-  autoDeploy: false
-  disk:
+  - name: api
+    type: web
+    env:
+      - key: PORT
+        value: "3000"
+      - key: DB_HOST
+        value: mysql
+      - key: DB_USER
+        value: mysql
+      - key: DB_DATABASE
+        value: college
+      - key: DB_PORT
+        value: "3306"
+    startCommand: npm start
+    buildCommand: npm install
+
+  - type: pserv
     name: mysql
-    mountPath: /var/lib/mysql
-    sizeGB: 10
-  envVars:
-  - fromGroup: mysql
+    plan: standard
+    env: docker
+    autoDeploy: false
+    disk:
+      name: mysql
+      mountPath: /var/lib/mysql
+      sizeGB: 10
+    envVars:
+      - fromGroup: mysql
 
 envVarGroups:
-- name: mysql
-  envVars:
-  - key: MYSQL_DATABASE
-    value: mysql
-  - key: MYSQL_USER
-    value: mysql
-  - key: MYSQL_PASSWORD
-    generateValue: true
-  - key: MYSQL_ROOT_PASSWORD
-    generateValue: true
+  - name: mysql
+    envVars:
+      - key: MYSQL_DATABASE
+        value: mysql
+      - key: MYSQL_USER
+        value: mysql
+      - key: MYSQL_PASSWORD
+        generateValue: true
+      - key: MYSQL_ROOT_PASSWORD
+        generateValue: true
