--- a/backups/Dockerfile
+++ b/backups/Dockerfile
@@ -4,7 +4,7 @@ FROM mysql/mysql-server:8.0.32
 
 RUN mkdir -p /var/lib/mysql/backups
 
-CMD mysqldump -h "$MYSQL_HOST" -u "$MYSQL_USER" --password="$MYSQL_PASSWORD" \
+CMD mysqldump -h "$MYSQL_HOST" -u "$MYSQL_USER"  \
     --single-transaction \
     --result-file=/var/lib/mysql/backups/backup.$(date +%F.%T).sql \
     --all-databases
